change color and font weight of class values

--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
         <li>
           <div>
             <p>Calories</p>
-            <p>277kcal</p>
+            <p class="values">277kcal</p>
           </div>
         </li>
         <li>
           <div>
             <p>Carbs</p>
-            <p>0g</p>
+            <p class="values">0g</p>
           </div>
         </li>
         <li>
           <div>
             <p>Protein</p>
-            <p>20g</p>
+            <p class="values">20g</p>
           </div>
         </li>
         <li>
           <div>
             <p>Fat</p>
-            <p>22g</p>
+            <p class="values">22g</p>
           </div>
         </li>
       </ul>
